[package]
name = "pyo3-prost"
version = "0.1.0"
edition = "2018"
authors = ["elbaro <elbaro@users.noreply.github.com>"]
license = "MIT"
repository = "https://github.com/elbaro/pyo3-prost"
description = "Use Rust protobuf structs in Python."

[dependencies]
proc-macro2 = "1.0.27"
quote = "1.0.9"
syn = {version="1.0.73", features=["full"]}

[lib]
proc-macro = true
