[package]
name = "rupy-proto"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib", "cdylib"]

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[dependencies]
prost = "0.8.0"
prost-build = "0.8.0"
pyo3 = "0.14.1"
pyo3-prost = {path = "../.."}
