[package]
name = "rupy-proto"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib", "cdylib"]

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[dependencies]
ouroboros = "0.15.6"
owning_ref = "0.4.1"
prost = "0.11.9"
prost-build = "0.11.9"
pyo3 = { version = "0.18.3", features = ["multiple-pymethods"] }
fastproto-macro = { path = "../../fastproto-macro" }
fastproto-lib = { path = "../../fastproto-lib" }
